--- a/.travis.yml
+++ b/.travis.yml
@@ -6,5 +6,7 @@ matrix:
     - os: osx
 
 script:
+  - python updatelib.py
   - pip install cibuildwheel==0.4.0
   - cibuildwheel --output-dir wheelhouse
+
