--- a/appveyor.yml
+++ b/appveyor.yml
@@ -1,7 +1,12 @@
+environment:
+  TWINE_USERNAME: fdabrandao
+  # Note: TWINE_PASSWORD is set in Appveyor settings
 build_script:
   - python updatelib.py
   - pip install cibuildwheel==0.4.0
   - cibuildwheel --output-dir wheelhouse
+  - python -m pip install twine
+  - python -m twine upload (resolve-path wheelhouse\*.whl)
 artifacts:
   - path: "wheelhouse\\*.whl"
     name: Wheels
