--- a/appveyor.yml
+++ b/appveyor.yml
@@ -5,8 +5,9 @@ build_script:
   - python updatelib.py
   - pip install cibuildwheel==0.4.0
   - cibuildwheel --output-dir wheelhouse
-  - python -m pip install twine
-  - python -m twine upload (resolve-path wheelhouse\*.whl)
+  - ps: >-
+        python -m pip install twine
+        python -m twine upload (resolve-path wheelhouse\*.whl)
 artifacts:
   - path: "wheelhouse\\*.whl"
     name: Wheels
