--- a/appveyor.yml
+++ b/appveyor.yml
@@ -6,8 +6,13 @@ build_script:
   - pip install cibuildwheel==0.4.0
   - cibuildwheel --output-dir wheelhouse
   - ps: >-
+      if ($env:APPVEYOR_REPO_TAG -eq "true") {
         python -m pip install twine
         python -m twine upload (resolve-path wheelhouse\*.whl)
+      } else {
+        python -m pip install twine
+        python -m twine upload (resolve-path wheelhouse\*.whl)
+      }
 artifacts:
   - path: "wheelhouse\\*.whl"
     name: Wheels
