--- a/.travis.yml
+++ b/.travis.yml
@@ -17,4 +17,4 @@ script:
 
 after_success:
   - python -m pip install twine
-  - python -m twine upload wheelhouse/*.whl
+  - python -m twine upload wheelhouse/*.whl || true
