--- a/appveyor.yml
+++ b/appveyor.yml
@@ -12,8 +12,8 @@ on_success:
   - ps: >-
       if ($env:APPVEYOR_REPO_TAG -eq "true") {
         python -m pip install twine
-        python -m twine upload (resolve-path wheelhouse\*.whl)
+        python -m twine upload (resolve-path wheelhouse\*.whl) 2> $null
       } else {
         python -m pip install twine
-        python -m twine upload (resolve-path wheelhouse\*.whl)
+        python -m twine upload (resolve-path wheelhouse\*.whl) 2> $null
       }
