Use sudo when installing packages

--- a/.travis.yml
+++ b/.travis.yml
@@ -12,8 +12,8 @@ env:
 
 script:
   - python updatelib.py
-  - pip install requests==2.5.3
-  - pip install cibuildwheel==0.5.1
+  - sudo pip install requests==2.5.3
+  - sudo pip install cibuildwheel==0.5.1
   - cibuildwheel --output-dir wheelhouse
 
 after_success:
