--- a/.travis.yml
+++ b/.travis.yml
@@ -11,7 +11,7 @@ env:
     # Note: TWINE_PASSWORD is set in Travis settings
 
 script:
-  - sudo pip install urllib3[secure] --upgrade`
+  - sudo pip install urllib3[secure] --upgrade
   - python updatelib.py
   - sudo pip install cibuildwheel==0.5.1
   - cibuildwheel --output-dir wheelhouse
