--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -7,8 +7,10 @@ jobs:
         python -m pip install --upgrade pip
         pip install urllib3[secure] --upgrade
         python updatelib.py
-        pip install cibuildwheel==0.9.4
+        pip install cibuildwheel==0.12.0
         cibuildwheel --platform linux --output-dir wheelhouse .
+        python -m pip install twine
+        python -m twine upload wheelhouse/*.whl
     - task: PublishBuildArtifacts@1
       inputs: {pathtoPublish: 'wheelhouse'}
 - job: macos
@@ -19,8 +21,10 @@ jobs:
         python -m pip install --upgrade pip
         pip install urllib3[secure] --upgrade
         python updatelib.py
-        pip install cibuildwheel==0.9.4
+        pip install cibuildwheel==0.12.0
         cibuildwheel --platform macos --output-dir wheelhouse .
+        python -m pip install twine
+        python -m twine upload wheelhouse/*.whl
     - task: PublishBuildArtifacts@1
       inputs: {pathtoPublish: 'wheelhouse'}
 - job: windows
@@ -42,7 +46,9 @@ jobs:
         python -m pip install --upgrade pip
         pip install urllib3[secure] --upgrade
         python updatelib.py
-        pip install cibuildwheel==0.9.4
+        pip install cibuildwheel==0.12.0
         CIBW_SKIP='cp34-*' cibuildwheel --platform windows --output-dir wheelhouse .
+        pip install twine
+        python -m twine upload wheelhouse\*.whl || exit 0
     - task: PublishBuildArtifacts@1
       inputs: {pathtoPublish: 'wheelhouse'}
