--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -10,7 +10,7 @@ jobs:
         pip install cibuildwheel==0.12.0
         cibuildwheel --platform linux --output-dir wheelhouse .
         python -m pip install twine
-        python -m twine upload wheelhouse/*.whl
+        python -m twine upload -u $(TWINE_USERNAME) -p $(TWINE_PASSWORD) wheelhouse/*.whl || exit 0
     - task: PublishBuildArtifacts@1
       inputs: {pathtoPublish: 'wheelhouse'}
 - job: macos
@@ -24,7 +24,7 @@ jobs:
         pip install cibuildwheel==0.12.0
         cibuildwheel --platform macos --output-dir wheelhouse .
         python -m pip install twine
-        python -m twine upload wheelhouse/*.whl
+        python -m twine upload -u $(TWINE_USERNAME) -p $(TWINE_PASSWORD) wheelhouse/*.whl || exit 0
     - task: PublishBuildArtifacts@1
       inputs: {pathtoPublish: 'wheelhouse'}
 - job: windows
@@ -49,6 +49,6 @@ jobs:
         pip install cibuildwheel==0.12.0
         CIBW_SKIP='cp34-*' cibuildwheel --platform windows --output-dir wheelhouse .
         pip install twine
-        python -m twine upload wheelhouse\*.whl || exit 0
+        python -m twine upload -u $(TWINE_USERNAME) -p $(TWINE_PASSWORD) wheelhouse/*.whl || exit 0
     - task: PublishBuildArtifacts@1
       inputs: {pathtoPublish: 'wheelhouse'}
