--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -1,54 +1,42 @@
 jobs:
 - job: linux
   pool: {vmImage: 'Ubuntu-16.04'}
-  steps: 
+  steps:
     - task: UsePythonVersion@0
     - bash: |
-        pip install --upgrade pip
-        pip install urllib3[secure] --upgrade
-        python updatelib.py
-        pip install cibuildwheel==1.1.0
+        python3 -m pip install --upgrade pip
+        python3 -m pip install cibuildwheel==1.1.0
+        python3 updatelib.py
         cibuildwheel --platform linux --output-dir wheelhouse .
-        pip install twine
+        python3 -m pip install twine
         twine upload -u $(TWINE_USERNAME) -p $(TWINE_PASSWORD) wheelhouse/*.whl || exit 0
     - task: PublishBuildArtifacts@1
       inputs: {pathtoPublish: 'wheelhouse'}
 - job: macos
   pool: {vmImage: 'macOS-10.13'}
-  steps: 
+  steps:
     - task: UsePythonVersion@0
     - bash: |
-        pip install --upgrade pip
-        pip install urllib3[secure] --upgrade
-        python updatelib.py
-        pip install cibuildwheel==1.1.0
+        python3 -m pip install --upgrade pip
+        python3 -m pip install cibuildwheel==1.1.0
+        python3 updatelib.py
         cibuildwheel --platform macos --output-dir wheelhouse .
-        pip install twine
+        python3 -m pip install twine
         twine upload -u $(TWINE_USERNAME) -p $(TWINE_PASSWORD) wheelhouse/*.whl || exit 0
     - task: PublishBuildArtifacts@1
       inputs: {pathtoPublish: 'wheelhouse'}
 - job: windows
   pool: {vmImage: 'vs2017-win2016'}
-  steps: 
-    - {task: UsePythonVersion@0, inputs: {versionSpec: '2.7', architecture: x86}}
-    - {task: UsePythonVersion@0, inputs: {versionSpec: '2.7', architecture: x64}}
-    - {task: UsePythonVersion@0, inputs: {versionSpec: '3.5', architecture: x86}}
-    - {task: UsePythonVersion@0, inputs: {versionSpec: '3.5', architecture: x64}}
-    - {task: UsePythonVersion@0, inputs: {versionSpec: '3.6', architecture: x86}}
-    - {task: UsePythonVersion@0, inputs: {versionSpec: '3.6', architecture: x64}}
-    - {task: UsePythonVersion@0, inputs: {versionSpec: '3.7', architecture: x86}}
-    - {task: UsePythonVersion@0, inputs: {versionSpec: '3.7', architecture: x64}}
-    - {task: UsePythonVersion@0, inputs: {versionSpec: '3.8', architecture: x86}}
-    - {task: UsePythonVersion@0, inputs: {versionSpec: '3.8', architecture: x64}}
+  steps:
+    - task: UsePythonVersion@0
     - script: choco install vcpython27 -f -y
       displayName: Install Visual C++ for Python 2.7
     - bash: |
-        pip install --upgrade pip
-        pip install urllib3[secure] --upgrade
+        python -m pip install --upgrade pip
+        python -m pip install cibuildwheel==1.1.0
         python updatelib.py
-        pip install cibuildwheel==1.1.0
-        CIBW_SKIP='cp34-*' cibuildwheel --platform windows --output-dir wheelhouse .
-        pip install twine
+        cibuildwheel --platform windows --output-dir wheelhouse .
+        python -m pip install twine
         twine upload -u $(TWINE_USERNAME) -p $(TWINE_PASSWORD) wheelhouse/*.whl || exit 0
     - task: PublishBuildArtifacts@1
       inputs: {pathtoPublish: 'wheelhouse'}
