--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -88,8 +88,7 @@ jobs:
         python -m pip install cibuildwheel==1.7.4
         python updatelib.py
         export PATH="/d/a/1/s/ampl:$PATH"
-        # Skipping python 3.9 (linking error)
-        CIBW_SKIP='pp* cp39-*' cibuildwheel --platform windows --output-dir wheelhouse .
+        CIBW_SKIP='pp*' cibuildwheel --platform windows --output-dir wheelhouse .
       displayName: Build wheels
     - task: PublishBuildArtifacts@1
       inputs: {pathtoPublish: 'wheelhouse'}
