--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -12,7 +12,9 @@ jobs:
     - task: UsePythonVersion@0
     - bash: |
         set -ex
+        python -m pip install --upgrade pip
         python updatelib.py
+        python setup.py sdist -d upload
         pip install .
         cd docs
         pip install -r requirements-dev.txt
@@ -47,7 +49,6 @@ jobs:
         python -m pip install cibuildwheel==1.7.4
         python updatelib.py
         cibuildwheel --platform linux --output-dir wheelhouse .
-        python3 setup.py sdist -d wheelhouse
       displayName: Build wheels
     - task: PublishBuildArtifacts@1
       inputs: {pathtoPublish: 'wheelhouse'}
