Use cibuildwheel==1.12.0 for python 3.5

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -45,10 +45,12 @@ jobs:
       displayName: Install AMPL
     - bash: |
         set -ex
-        python -m pip install --upgrade pip
-        python -m pip install cibuildwheel==2.4.0
         python updatelib.py
-        cibuildwheel --platform linux --output-dir wheelhouse .
+        python -m pip install --upgrade pip
+        python -m pip install --upgrade cibuildwheel==1.12.0
+        CIBW_BUILD='cp35-*' cibuildwheel --platform linux --output-dir wheelhouse .
+        python -m pip install --upgrade cibuildwheel==2.4.0
+        CIBW_SKIP='*musllinux*' cibuildwheel --platform linux --output-dir wheelhouse .
       displayName: Build wheels
     - task: PublishBuildArtifacts@1
       inputs: {pathtoPublish: 'wheelhouse'}
@@ -64,10 +66,12 @@ jobs:
       displayName: Install AMPL
     - bash: |
         set -ex
-        python -m pip install --upgrade pip
-        python -m pip install cibuildwheel==2.4.0
         python updatelib.py
-        CIBW_SKIP='pp*' cibuildwheel --platform macos --output-dir wheelhouse .
+        python -m pip install --upgrade pip
+        python -m pip install --upgrade cibuildwheel==1.12.0
+        CIBW_BUILD='cp35-*' cibuildwheel --platform windows --output-dir wheelhouse .
+        python -m pip install --upgrade cibuildwheel==2.4.0
+        CIBW_SKIP='pp*' cibuildwheel --platform windows --output-dir wheelhouse .
       displayName: Build wheels
     - task: PublishBuildArtifacts@1
       inputs: {pathtoPublish: 'wheelhouse'}
@@ -83,11 +87,14 @@ jobs:
       displayName: Install AMPL
     - bash: |
         set -ex
-        python -m pip install --upgrade pip
-        python -m pip install cibuildwheel==2.4.0
         python updatelib.py
         export PATH="/d/a/1/s/ampl:$PATH"
-        CIBW_SKIP='pp* cp27-*' cibuildwheel --platform windows --output-dir wheelhouse .
+        python -m pip install --upgrade pip
+        python -m pip install --upgrade cibuildwheel==1.12.0
+        CIBW_BUILD='cp35-*' cibuildwheel --platform windows --output-dir wheelhouse .
+        python -m pip install --upgrade cibuildwheel==2.4.0
+        CIBW_TEST_REQUIRES='' CIBW_SKIP='pp* cp27-*' cibuildwheel --platform windows --output-dir wheelhouse . 
+        # CIBW_TEST_REQUIRES='' since there is no pandas for python3.10 yet
       displayName: Build wheels
     - task: PublishBuildArtifacts@1
       inputs: {pathtoPublish: 'wheelhouse'}
