--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -50,7 +50,7 @@ jobs:
         python -m pip install --upgrade cibuildwheel==1.12.0
         CIBW_BUILD="cp35-*" cibuildwheel --platform linux --output-dir wheelhouse .
         python -m pip install --upgrade cibuildwheel==2.4.0
-        CIBW_TEST_REQUIRES="" CIBW_SKIP="pp* *musllinux* $CIBW_SKIP" cibuildwheel --platform linux --output-dir wheelhouse .
+        CIBW_TEST_REQUIRES="" CIBW_SKIP="*musllinux* $CIBW_SKIP" cibuildwheel --platform linux --output-dir wheelhouse .
       displayName: Build wheels
     - task: PublishBuildArtifacts@1
       inputs: {pathtoPublish: 'wheelhouse'}
