--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -49,7 +49,7 @@ jobs:
         python -m pip install --upgrade pip
         python -m pip install --upgrade cibuildwheel==1.12.0
         CIBW_BUILD="cp35-*" cibuildwheel --platform linux --output-dir wheelhouse .
-        python -m pip install --upgrade cibuildwheel==2.11.3
+        python -m pip install --upgrade cibuildwheel==2.12.0
         CIBW_TEST_REQUIRES="" CIBW_SKIP="*musllinux* $CIBW_SKIP" cibuildwheel --platform linux --output-dir wheelhouse .
       displayName: Build wheels
     - task: PublishBuildArtifacts@1
@@ -70,8 +70,8 @@ jobs:
         python -m pip install --upgrade pip
         # python -m pip install --upgrade cibuildwheel==1.12.0
         # CIBW_BUILD="cp35-*" cibuildwheel --platform macos --output-dir wheelhouse .
-        python -m pip install --upgrade cibuildwheel==2.11.3
-        CIBW_TEST_REQUIRES="" CIBW_SKIP="pp* $CIBW_SKIP" cibuildwheel --platform macos --output-dir wheelhouse .
+        python -m pip install --upgrade cibuildwheel==2.12.0
+        CIBW_ARCHS="x86_64 arm64" CIBW_TEST_REQUIRES="" CIBW_SKIP="pp* $CIBW_SKIP" cibuildwheel --platform macos --output-dir wheelhouse .
       displayName: Build wheels
     - task: PublishBuildArtifacts@1
       inputs: {pathtoPublish: 'wheelhouse'}
@@ -93,7 +93,7 @@ jobs:
         python -m pip install --upgrade pip
         python -m pip install --upgrade cibuildwheel==1.12.0
         CIBW_BUILD="cp35-*" cibuildwheel --platform windows --output-dir wheelhouse .
-        python -m pip install --upgrade cibuildwheel==2.11.3
+        python -m pip install --upgrade cibuildwheel==2.12.0
         CIBW_TEST_REQUIRES="" CIBW_SKIP="pp* cp27-* $CIBW_SKIP" cibuildwheel --platform windows --output-dir wheelhouse .
       displayName: Build wheels
     - task: PublishBuildArtifacts@1
