--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -13,7 +13,7 @@ jobs:
     - bash: |
         set -ex
         python -m pip install --upgrade pip
-        python updatelib.py
+        python scripts/updatelib.py
         python setup.py sdist -d upload
         pip install .
         cd docs
@@ -45,7 +45,7 @@ jobs:
       displayName: Install AMPL
     - bash: |
         set -ex
-        python updatelib.py
+        python scripts/updatelib.py
         python -m pip install --upgrade pip
         python -m pip install --upgrade cibuildwheel==1.12.0
         CIBW_BUILD="cp35-*" cibuildwheel --platform linux --output-dir wheelhouse .
@@ -66,7 +66,7 @@ jobs:
       displayName: Install AMPL
     - bash: |
         set -ex
-        python updatelib.py
+        python scripts/updatelib.py
         python -m pip install --upgrade pip
         # python -m pip install --upgrade cibuildwheel==1.12.0
         # CIBW_BUILD="cp35-*" cibuildwheel --platform macos --output-dir wheelhouse .
@@ -88,7 +88,7 @@ jobs:
       displayName: Install AMPL
     - bash: |
         set -ex
-        python updatelib.py
+        python scripts/updatelib.py
         export PATH="/d/a/1/s/ampl:$PATH"
         python -m pip install --upgrade pip
         python -m pip install --upgrade cibuildwheel==1.12.0
