--- a/.github/workflows/build-and-test.yaml
+++ b/.github/workflows/build-and-test.yaml
@@ -29,7 +29,7 @@ jobs:
           CIBW_ARCHS_MACOS: x86_64 universal2
           CIBW_SKIP: pp* cp27-* *_i686 *-win32 *musllinux*
           CIBW_TEST_COMMAND: python -m amplpy.tests
-          CIBW_TEST_REQUIRES: --index-url https://pypi.ampl.com --extra-index-url https://pypi.org/simple ampl_module_base ampl_module_minos pandas numpy
+          CIBW_TEST_REQUIRES: --index-url https://pypi.ampl.com --extra-index-url https://pypi.org/simple ampl_module_base ampl_module_highs pandas numpy
 
       - uses: actions/upload-artifact@v3
         with:
