Test if modules were installed

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -1,8 +1,8 @@
 variables:
-  CIBW_TEST_REQUIRES: --index-url https://pypi.ampl.com --extra-index-url https://pypi.org/simple ampl_module_base ampl_module_highs pandas numpy
   CIBW_SKIP: pp* cp27-* *_i686 *-win32 *musllinux*
   CIBW_ARCHS_MACOS: x86_64 universal2
-  CIBW_TEST_COMMAND: python -m amplpy.tests
+  CIBW_TEST_COMMAND: python -m amplpy.modules installed # python -m amplpy.tests
+  CIBW_TEST_REQUIRES: --index-url https://pypi.ampl.com --extra-index-url https://pypi.org/simple ampl_module_base ampl_module_highs pandas numpy
 
 jobs:
 - job: docs
