Drop python 3.5 due to lack of f-strings

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -1,7 +1,7 @@
 variables:
   CIBW_SKIP: pp* cp27-* *_i686 *-win32 *musllinux*
   CIBW_ARCHS_MACOS: x86_64 universal2
-  CIBW_TEST_COMMAND: python -m amplpy.modules installed # python -m amplpy.tests
+  CIBW_TEST_COMMAND: python -m amplpy.tests
   CIBW_TEST_REQUIRES: --index-url https://pypi.ampl.com --extra-index-url https://pypi.org/simple ampl_module_base ampl_module_highs pandas numpy
 
 jobs:
@@ -32,8 +32,8 @@ jobs:
         set -ex
         python scripts/updatelib.py
         python -m pip install --upgrade pip
-        python -m pip install --upgrade cibuildwheel==1.12.0
-        CIBW_BUILD="cp35-*" cibuildwheel --platform linux --output-dir wheelhouse .
+        # python -m pip install --upgrade cibuildwheel==1.12.0
+        # CIBW_BUILD="cp35-*" cibuildwheel --platform linux --output-dir wheelhouse .
         python -m pip install --upgrade cibuildwheel==2.12.0
         cibuildwheel --platform linux --output-dir wheelhouse .
       displayName: Build wheels
@@ -62,8 +62,8 @@ jobs:
         set -ex
         python scripts/updatelib.py
         python -m pip install --upgrade pip
-        python -m pip install --upgrade cibuildwheel==1.12.0
-        CIBW_BUILD="cp35-*" cibuildwheel --platform windows --output-dir wheelhouse .
+        # python -m pip install --upgrade cibuildwheel==1.12.0
+        # CIBW_BUILD="cp35-*" cibuildwheel --platform windows --output-dir wheelhouse .
         python -m pip install --upgrade cibuildwheel==2.12.0
         cibuildwheel --platform windows --output-dir wheelhouse .
       displayName: Build wheels
