--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -12,11 +12,11 @@ jobs:
     - bash: |
         set -ex
         python -m pip install --upgrade pip
-        python scripts/updatelib.py
+        python dev/updatelib.py
         python setup.py sdist -d upload
         pip install .
         cd docs
-        pip install -r requirements-dev.txt
+        pip install -r dev/requirements.txt
         make html
         cd ..
         mkdir -p upload/doc
